--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,5 +1,3 @@
-# frontend/Dockerfile
-
 # Stage 1: Build the Angular app
 FROM node:20-alpine AS build
 
@@ -14,8 +12,8 @@ RUN npm install
 # Copy source code
 COPY . .
 
-# Build the app
-RUN npm run build
+# Build the app for static serving (no SSR)
+RUN npm run build -- --configuration=production --output-path=dist/angular-capstone
 
 # Stage 2: Serve the app with Nginx
 FROM nginx:alpine
@@ -23,8 +21,7 @@ FROM nginx:alpine
 # Copy built app to nginx
 COPY --from=build /app/dist/angular-capstone /usr/share/nginx/html
 
-# Copy nginx configuration (optional)
-# COPY nginx.conf /etc/nginx/nginx.conf
+# Using default nginx configuration
 
 # Expose port 80
 EXPOSE 80
