--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -18,10 +18,11 @@ RUN npm run build -- --configuration=production --output-path=dist/angular-capst
 # Stage 2: Serve the app with Nginx
 FROM nginx:alpine
 
-# Copy built app to nginx (use the correct path from build output)
-COPY --from=build /app/dist/angular-capstone /usr/share/nginx/html
+# Copy built app to nginx (the Angular files are in the browser subfolder!)
+COPY --from=build /app/dist/angular-capstone/browser /usr/share/nginx/html
 
-# Using default nginx configuration
+# Copy custom nginx configuration for Angular routing
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
