--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,19 +4,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Handle Angular routing
+    # Handle Angular routing - CRITICAL for SPAs
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # API requests to backend
-    location /api/ {
-        proxy_pass http://backend:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
-
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
 }
