--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=travel-buddy-backend
 jwt.secret=mzu4S0oZIpTYH8OKiNt8tDJet4uOVizG
 jwt.expiration=86400000
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/travel_buddy_db
-spring.datasource.username=root
-spring.datasource.password=a  c  d  c  1
+# ALWAYS connect to Docker MySQL (both local and container development)
+spring.datasource.url=jdbc:mysql://localhost:3307/travel_db
+spring.datasource.username=travel_user
+spring.datasource.password=travel_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate properties
